--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 img {
-    width: 200px;
+    width: 150px;
     height: auto;
 }
 .top-carousel {
@@ -19,21 +19,44 @@ img {
 
 .main-body {
     display: flex;
+    flex: auto;
     justify-content: center;
 }
 
 .left-carousel {
     display: flex;
-    flex-direction: column;
     flex: auto;
+    flex-direction: column;
     align-items: center;
     margin: 0;
 }
 
+.center {
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    align-items: center;
+    flex: auto;
+    width: 450px;
+}
+
+.center > img {
+    min-width: 200px;
+    flex: auto;
+}
+
 .right-carousel {
     display: flex;
-    flex-direction: column;
     flex: auto;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+.bottom-carousel {
+    display: flex;
+    flex: auto;
+    justify-content: center;
     align-items: center;
     margin: 0;
 }
